--- a/isg-init.org
+++ b/isg-init.org
@@ -300,12 +300,13 @@
 #+BEGIN_SRC emacs-lisp
   (defun isg/machine-settings ()
     "System specific overrides go here."
-    (cond
-     ((string-match "^BERTRAND"  system-name) isg/config-windows-home-pc)
-     ((string-match "^localhost" system-name) isg/config-chromebook)
-     ((string-match "^socrates"  system-name) isg/config-old-ubuntu-laptop)
-     ((string-match "^ernesto"   system-name) isg/config-macbook-air)
-     ((string-match "^vb1604"    system-name) isg/config-ubuntu-vm)))
+    (let ((sysname (system-name)))
+      (cond
+       ((string-match "^BERTRAND"  sysname) isg/config-windows-home-pc)
+       ((string-match "^localhost" sysname) isg/config-chromebook)
+       ((string-match "^socrates"  sysname) isg/config-old-ubuntu-laptop)
+       ((string-match "^ernesto"   sysname) isg/config-macbook-air)
+       ((string-match "^vb1604"    sysname) isg/config-ubuntu-vm))))
 
   (cl-labels ((load-settings (which)
                              (mapcar (lambda (pair)
@@ -393,6 +394,24 @@
   ;; (gnuserv-start)
   ;; (setq gnuserv-frame(selected-frame)))))
 
+* frame-setup
+#+BEGIN_SRC emacs-lisp
+  (isg/timer "frame-setup"
+             (defun isg/frame-setup ()
+               (when (and (isg/val 'frame-r) (isg/val 'frame-l))
+                 (setq initial-frame-alist (isg/val 'frame-r)
+                       default-frame-alist (isg/val 'frame-l)))
+               (add-to-list 'default-frame-alist
+                            (cons 'font
+                                  (isg/val 'default-font))))
+
+             (isg/frame-setup)
+             (make-frame)
+
+             (if (fboundp 'scroll-bar-mode) (scroll-bar-mode -1))
+             (if (fboundp 'tool-bar-mode) (tool-bar-mode -1))
+             (if (fboundp 'menu-bar-mode) (menu-bar-mode -1)))
+#+END_SRC
 
 * essential packages
 ** magit
@@ -1478,140 +1497,121 @@
              (use-package ws-butler
                :defer t))
 #+END_SRC
-* frame-setup
-#+BEGIN_SRC emacs-lisp
-  (isg/timer "frame-setup"
-             (defun isg/frame-setup ()
-               (when (and (isg/val 'frame-r) (isg/val 'frame-l))
-                 (setq initial-frame-alist (isg/val 'frame-r)
-                       default-frame-alist (isg/val 'frame-l)))
-               (add-to-list 'default-frame-alist
-                            (cons 'font
-                                  (isg/val 'default-font))))
-
-             (defun isg/run-machine-function (property)
-               (let ((fn (isg/val property)))
-                 (if fn (funcall fn))))
-
-             (isg/frame-setup)
-             (make-frame)
-
-             (if (fboundp 'scroll-bar-mode) (scroll-bar-mode -1))
-             (if (fboundp 'tool-bar-mode) (tool-bar-mode -1))
-             (if (fboundp 'menu-bar-mode) (menu-bar-mode -1)))
-#+END_SRC
 * global settings
 #+BEGIN_SRC emacs-lisp
-  (isg/timer "global-settings"
-             (isg/run-machine-function 'post-setup-fn)
-             (setq-default show-trailing-whitespace nil)
-             (add-hook 'before-save-hook 'delete-trailing-whitespace)
+    (isg/timer "global-settings"
 
-             ;; Make sure it uses UTF-8 across the board
-             (prefer-coding-system 'utf-8)
-             (set-language-environment "UTF-8")
-             (set-default-coding-systems 'utf-8)
-             (set-terminal-coding-system 'utf-8)
-             (set-keyboard-coding-system 'utf-8)
-             (setq locale-coding-system 'utf-8)
-             (setq default-file-name-coding-system 'utf-8)
-             (when (display-graphic-p)
-               (setq x-select-request-type '(UTF8_STRING COMPOUND_TEXT TEXT STRING)))
+               (let ((fn (isg/val 'post-setup-fn)))
+                 (if fn (funcall fn)))
 
-             (autoload 'zap-up-to-char "misc"
-               "Kill up to, but not including ARGth occurrence of CHAR." t)
+               (setq-default show-trailing-whitespace nil)
+               (add-hook 'before-save-hook 'delete-trailing-whitespace)
 
-             ;; give buffers unique names
-             (require 'uniquify)
-             (setq uniquify-buffer-name-style 'post-forward)
-             (global-auto-revert-mode t) ; reload files that have been changed outside of emacs
-             (show-paren-mode t)
-             (global-font-lock-mode t)
-             (transient-mark-mode t) ; highlight selected text region
-             (fset 'yes-or-no-p 'y-or-n-p)
-             (setq-default font-lock-maximum-decoration t)
-             (setq-default indent-tabs-mode nil)
-             (blink-cursor-mode 0)
-             (if (not (file-exists-p (isg/val 'save-folder)))
-                 (make-directory (isg/val 'save-folder)))
+               ;; Make sure it uses UTF-8 across the board
+               (prefer-coding-system 'utf-8)
+               (set-language-environment "UTF-8")
+               (set-default-coding-systems 'utf-8)
+               (set-terminal-coding-system 'utf-8)
+               (set-keyboard-coding-system 'utf-8)
+               (setq locale-coding-system 'utf-8)
+               (setq default-file-name-coding-system 'utf-8)
+               (when (display-graphic-p)
+                 (setq x-select-request-type '(UTF8_STRING COMPOUND_TEXT TEXT STRING)))
 
-             (when (fboundp 'windmove-default-keybindings)
-               (windmove-default-keybindings))
-             (when (fboundp 'winner-mode)
-               (winner-mode 1))
+               (autoload 'zap-up-to-char "misc"
+                 "Kill up to, but not including ARGth occurrence of CHAR." t)
 
-             (setq ring-bell-function (lambda () (message "*beep*"))
-                   browse-url-browser-function 'browse-url-generic
-                   browse-url-generic-program (isg/val 'url-opener)
-                   standard-indent 2
-                   create-lockfiles nil        ; don't create lockfiles
-                   x-select-enable-clipboard t
-                   x-select-enable-primary t
-                   save-interprogram-paste-before-kill t
-                   apropos-do-all t
-                   mouse-yank-at-point t
-                   require-final-newline t
-                   visible-bell t
-                   ediff-window-setup-function 'ediff-setup-windows-plain
-                   line-move-visual nil
-                   line-number-mode t
-                   european-calendar-style t
-                   display-time-24hr-format t
-                   default-tab-width 2
-                   column-number-mode t
-                   enable-local-variables nil  ; ignore local variables defined in files
-                   inhibit-startup-message t
-                   initial-scratch-message nil
-                   backup-by-copying t         ; don't clobber symlinks
-                   delete-old-versions t
-                   kept-new-versions 6
-                   kept-old-versions 2
-                   version-control t           ; use versioned backups
-                   create-lockfiles nil
-                   backup-directory-alist `((".*" . ,temporary-file-directory))
-                   auto-save-file-name-transforms `((".*" ,temporary-file-directory t)))
+               ;; give buffers unique names
+               (require 'uniquify)
+               (setq uniquify-buffer-name-style 'post-forward)
+               (global-auto-revert-mode t) ; reload files that have been changed outside of emacs
+               (show-paren-mode t)
+               (global-font-lock-mode t)
+               (transient-mark-mode t) ; highlight selected text region
+               (fset 'yes-or-no-p 'y-or-n-p)
+               (setq-default font-lock-maximum-decoration t)
+               (setq-default indent-tabs-mode nil)
+               (blink-cursor-mode 0)
+               (if (not (file-exists-p (isg/val 'save-folder)))
+                   (make-directory (isg/val 'save-folder)))
 
-      ;;; os specific settings
-             (cond
-              ((string-match "osx" (isg/val 'machine-os))
-               (setq
-                mac-command-modifier 'meta
-                default-directory "~/"
-                multi-term-program "/bin/bash")
+               (when (fboundp 'windmove-default-keybindings)
+                 (windmove-default-keybindings))
+               (when (fboundp 'winner-mode)
+                 (winner-mode 1))
 
-               (fset 'insertPound "#")
-               (global-set-key (kbd "C-M-3") 'insertPound))
-              ((string-match "linux" (isg/val 'machine-os))
-               (setq
-                default-directory "~/"
-                multi-term-program "/bin/bash")))
+               (setq ring-bell-function (lambda () (message "*beep*"))
+                     browse-url-browser-function 'browse-url-generic
+                     browse-url-generic-program (isg/val 'url-opener)
+                     standard-indent 2
+                     create-lockfiles nil        ; don't create lockfiles
+                     x-select-enable-clipboard t
+                     x-select-enable-primary t
+                     save-interprogram-paste-before-kill t
+                     apropos-do-all t
+                     mouse-yank-at-point t
+                     require-final-newline t
+                     visible-bell t
+                     ediff-window-setup-function 'ediff-setup-windows-plain
+                     line-move-visual nil
+                     line-number-mode t
+                     european-calendar-style t
+                     display-time-24hr-format t
+                     default-tab-width 2
+                     column-number-mode t
+                     enable-local-variables nil  ; ignore local variables defined in files
+                     inhibit-startup-message t
+                     initial-scratch-message nil
+                     backup-by-copying t         ; don't clobber symlinks
+                     delete-old-versions t
+                     kept-new-versions 6
+                     kept-old-versions 2
+                     version-control t           ; use versioned backups
+                     create-lockfiles nil
+                     backup-directory-alist `((".*" . ,temporary-file-directory))
+                     auto-save-file-name-transforms `((".*" ,temporary-file-directory t)))
 
-             ;; the standard set of company backends
-             (setq company-backends '(company-semantic
-                                      company-dabbrev-code
-                                      company-dabbrev
-                                      company-keywords))
+        ;;; os specific settings
+               (cond
+                ((string-match "osx" (isg/val 'machine-os))
+                 (setq
+                  mac-command-modifier 'meta
+                  default-directory "~/"
+                  multi-term-program "/bin/bash")
 
-             ;; turn on flychecking globally
-             (add-hook 'after-init-hook #'global-flycheck-mode)
-             (add-hook 'after-init-hook 'global-company-mode)
+                 (fset 'insertPound "#")
+                 (global-set-key (kbd "C-M-3") 'insertPound))
+                ((string-match "linux" (isg/val 'machine-os))
+                 (setq
+                  default-directory "~/"
+                  multi-term-program "/bin/bash")))
 
-             (require 'tramp)
-             (if (eq system-type 'windows-nt)
-                 (setq tramp-default-method "plinkx"))
+               ;; the standard set of company backends
+               (setq company-backends '(company-semantic
+                                        company-dabbrev-code
+                                        company-dabbrev
+                                        company-keywords))
 
-             (defhydra isg/hydra-text-scale (:hint nil :color pink)
-               "
-      Text Scale
-      ----------------------------------------------------
-      _g_: greater
-      _l_: lesser
-      "
-               ("g" text-scale-increase)
-               ("l" text-scale-decrease)
-               ("RET" nil "done" :color blue))
+               ;; turn on flychecking globally
+               (add-hook 'after-init-hook #'global-flycheck-mode)
+               (add-hook 'after-init-hook 'global-company-mode)
 
-             (bind-keys ("C-c w s"  . isg/hydra-text-scale/body)))
+               (require 'tramp)
+               (if (eq system-type 'windows-nt)
+                   (setq tramp-default-method "plinkx"))
+
+               (defhydra isg/hydra-text-scale (:hint nil :color pink)
+                 "
+        Text Scale
+        ----------------------------------------------------
+        _g_: greater
+        _l_: lesser
+        "
+                 ("g" text-scale-increase)
+                 ("l" text-scale-decrease)
+                 ("RET" nil "done" :color blue))
+
+               (bind-keys ("C-c w s"  . isg/hydra-text-scale/body)))
 
 
 
