--- a/isg-init.org
+++ b/isg-init.org
@@ -576,7 +576,7 @@
                (define-key read-expression-map (kbd "C-r") 'counsel-expression-history))
 
 
-             (defhydra isg/hydra-counsel (:hint nil :color pink)
+             (defhydra isg/hydra-counsel (:hint nil :color pink :exit t)
                "
           Counsel search
           ----------------------------------------------------
